# v2.5-setup-kit

./: README.md  llms.txt
.claude/skills/analyze-agent-zip/: SKILL.md
docs/: 02-mental-model.md  04-migration-workflow.md  05-sema4-patterns.md  08-observability.md  09-faq.md
docs/07-orchestration/: README.md
examples/agent-server-example/: README.md  agent_server_context.py  agent_server_helper.py  pyproject.toml  server.py
examples/agent-server-example/tests/: conftest.py  test_context.py  test_smoke.py
examples/feedback-mcp/: ARCHITECTURE.md  README.md  SETUP.md  pyproject.toml  server.py
examples/feedback-mcp/example-agents/: README.md
examples/feedback-mcp/example-agents/agent-feedback-analyzer/: agent-spec.yaml  runbook.md
examples/feedback-mcp/example-agents/agent-feedback-analyzer/semantic-data-models/: Agent Response Feedback.yaml
examples/feedback-mcp/example-agents/rate-my-food-recommendation/: agent-spec.yaml  runbook.md
examples/feedback-mcp/example-agents/rate-my-food-recommendation/semantic-data-models/: Agent Feedback Insights.yaml
examples/feedback-mcp/migrations/: 001_init.sql  002_add_thread_transcript.sql  003_add_user_id.sql
examples/feedback-mcp/reporter-agent/: README.md  agent-spec.yaml  config.yml  runbook.md  sdm.yml
examples/feedback-mcp/tests/: conftest.py  test_server.py
examples/worked-migration/: README.md
templates/: README.md
templates/entra-mcp-server-oauth/: README.md  mcp-server-oauth.bicep
templates/m365-oauth/: README.md  sema4-m365-graph-app-with-worker.bicep  sema4-m365-graph-app.bicep
(+1 files in other folders)
